--- a/circle.yml
+++ b/circle.yml
@@ -34,5 +34,5 @@ test:
         - adb shell input keyevent 82
         - bash ./apk_install_script:
             timeout: 180
-        - adb shell am instrument -w -r   -e debug false -e class com.android.androidtestbuild.ExampleInstrumentedTest com.android.androidtestbuild.test/android.support.test.runner.AndroidJUnitRunner
+        - adb shell am instrument -w -r   -e debug false -e class com.android.androidtestbuild.ExampleInstrumentedTest com.android.androidtestbuild.test/android.support.test.runner.AndroidJUnitRunner:
             timeout: 180
