added pk install script

--- a/circle.yml
+++ b/circle.yml
@@ -20,6 +20,9 @@ dependencies:
     override:
         - echo y | android update sdk --no-ui --all --filter tools,platform-tools,build-tools-25.0.2,android-25,extra-google-m2repository,extra-google-google_play_services,extra-android-support
         - ANDROID_HOME=/usr/local/android-sdk-linux ./gradlew dependencies
+    post:
+        - ./gradlew :app:assembleDebug
+        - ./gradlew :app:assembleDebugAndroidTest
 
 test:
     override:
@@ -27,12 +30,6 @@ test:
             background:true
             parallel:false
         - circle-android wait-for-boot
-        - ./gradlew :app:assembleDebug:
-            timeout: 1200
-        - ./gradlew :app:assembleDebugAndroidTest:
-            timeout: 1200
         - adb shell input keyevent 82
-        - bash ./apk_install_script:
-            timeout: 180
-        - adb shell am instrument -w -r   -e debug false -e class com.android.androidtestbuild.ExampleInstrumentedTest com.android.androidtestbuild.test/android.support.test.runner.AndroidJUnitRunner:
-            timeout: 180
+        - bash ./apk_install_script
+        - adb shell am instrument -w -r   -e debug false -e class com.android.androidtestbuild.ExampleInstrumentedTest com.android.androidtestbuild.test/android.support.test.runner.AndroidJUnitRunner
