--- a/circle.yml
+++ b/circle.yml
@@ -9,7 +9,7 @@ general:
 
 machine:
     environment:
-        ANDROID_HOME: /usr/local/android-sdk-linux'
+        ANDROID_HOME: /usr/local/android-sdk-linux
     java:
         version: oraclejdk8
     QEMU_AUDIO_DRV: none
@@ -19,7 +19,7 @@ dependencies:
         - sudo apt-get update; sudo apt-get install jq
     override:
         - echo y | android update sdk --no-ui --all --filter tools,platform-tools,build-tools-25.0.2,android-25,extra-google-m2repository,extra-google-google_play_services,extra-android-support
-        - ANDROID_HOME=/usr/local/android-sdk-linux ./gradlew dependencies
+        - sudo ANDROID_HOME=/usr/local/android-sdk-linux ./gradlew dependencies
     post:
         - ./gradlew :app:assembleDebug
         - ./gradlew :app:assembleDebugAndroidTest
