--- a/circle.yml
+++ b/circle.yml
@@ -19,10 +19,11 @@ dependencies:
         - sudo apt-get update; sudo apt-get install jq
     override:
         - echo y | android update sdk --no-ui --all --filter tools,platform-tools,build-tools-25.0.2,android-25,extra-google-m2repository,extra-google-google_play_services,extra-android-support
+        - chmod +x gradlew
         - sudo ANDROID_HOME=/usr/local/android-sdk-linux ./gradlew dependencies
     post:
-        - ./gradlew :app:assembleDebug
-        - ./gradlew :app:assembleDebugAndroidTest
+        - sudo ./gradlew :app:assembleDebug
+        - sudo ./gradlew :app:assembleDebugAndroidTest
 
 test:
     override:
