building the app in the test.

--- a/circle.yml
+++ b/circle.yml
@@ -19,16 +19,19 @@ dependencies:
         - ~/.gradle
         - ~/.android
     override:
-        - echo y | android update sdk --no-ui --all --filter tools,platform-tools,build-tools-25.0.2,android-25,extra-google-m2repository,extra-google-google_play_services,extra-android-support
-        - chmod +x gradlew
-        - ANDROID_HOME=/usr/local/android-sdk-linux ./gradlew dependencies
-    post:
-        - echo $ANDROID_HOME
-        - sudo ./gradlew :app:assembleDebug
-        - sudo ./gradlew :app:assembleDebugAndroidTest
+        - echo y | android update sdk --no-ui --all --filter tools
+        - echo y | android update sdk --no-ui --all --filter platform-tools
+        - echo y | android update sdk --no-ui --all --filter build-tools-25.0.2
+        - echo y | android update sdk --no-ui --all --filter android-25
+        - echo y | android update sdk --no-ui --all --filter extra-google-m2repository
+        - echo y | android update sdk --no-ui --all --filter extra-google-google_play_services
+        - echo y | android update sdk --no-ui --all --filter extra-android-support
 
 test:
     override:
+        - echo $ANDROID_HOME
+        - sudo ./gradlew :app:assembleDebug
+        - sudo ./gradlew :app:assembleDebugAndroidTest
         - emulator -avd circleci-android24 -no-window:
             background:true
             parallel:false
