--- a/circle.yml
+++ b/circle.yml
@@ -29,7 +29,7 @@ dependencies:
         - echo $ANDROID_HOME
         - sudo ./gradlew assembleDebug
         - sudo ./gradlew assembleDebugAndroidTest
-        - echo $GCLOUD_SERVICE_KEY | base64 --decode > ${HOME}/client-secret.json
+        - echo $GCLOUD_SERVICE_KEY | base64 --decode --ignore-garbage > ${HOME}/client-secret.json
         - sudo /opt/google-cloud-sdk/bin/gcloud --quiet components update
         - sudo /opt/google-cloud-sdk/bin/gcloud --quiet components install beta
         - sudo /opt/google-cloud-sdk/bin/gcloud auth activate-service-account testzopnowproject@appspot.gserviceaccount.com --key-file ${HOME}/client-secret.json
