--- a/circle.yml
+++ b/circle.yml
@@ -39,15 +39,11 @@ dependencies:
 
 test:
     override:
-        - emulator -avd circleci-android24-googleapis -no-window -gpu off:
+        - emulator -avd circleci-android24-googleapis -gpu off:
             background: true
             parallel: true
         - circle-android wait-for-boot
         - sleep 30
         - adb shell input keyevent 82
-        - sudo ./gradlew assembleDebug
-        - sudo ./gradlew assembleDebugAndroidTest
-        - bash ./apk_install_script
-        - adb shell am instrument -w -r   -e debug false -e class com.android.androidtestbuild.ExampleInstrumentedTest com.android.androidtestbuild.test/android.support.test.runner.AndroidJUnitRunner
+        - sudo ./gradlew connectedAndroidTest
         - cp -r app/build/outputs $CIRCLE_ARTIFACTS
-        - cp -r app/build/reports/* $CIRCLE_TEST_REPORTS
