Added ANDROID_HOME in each gradle command

--- a/circle.yml
+++ b/circle.yml
@@ -24,8 +24,8 @@ dependencies:
         - echo y | android update sdk --no-ui --all --filter extra-android-support
         - echo y | android update sdk --no-ui --all --filter "sys-img-armeabi-v7a-google_apis-24"
         - sudo ANDROID_HOME=/usr/local/android-sdk-linux ./gradlew dependencies
-        - sudo ./gradlew assembleDebug
-        - sudo ./gradlew assembleDebugAndroidTest
+        - sudo ANDROID_HOME=/usr/local/android-sdk-linux ./gradlew assembleDebug
+        - sudo ANDROID_HOME=/usr/local/android-sdk-linux ./gradlew assembleDebugAndroidTest
 
 test:
     override:
